fix: the command bar buttons don't wrap their text when window size is decreased (#1795)

--- a/src/DetailsView/Styles/detailsview.scss
+++ b/src/DetailsView/Styles/detailsview.scss
@@ -301,10 +301,6 @@ div.insights-file-issue-details-dialog-container {
                 color: $communication-primary;
             }
         }
-        .details-view-command-buttons {
-            display: flex;
-            margin-right: 16px;
-        }
     }
     .header-bar {
         padding-left: 12px;
